--- a/views/layouts/forms.handlebars
+++ b/views/layouts/forms.handlebars
@@ -1,9 +1,9 @@
 
-<form action="">
+<form action="/add" method="POST">
     <p>Titulo:</p>
     <input type="text" name="titulo">
     <p>Descrição:</p>
-    <input type="text" name="titulo">
+    
     <textarea name="conteudo"></textarea>
     <button type="submit">Cadastrar Curso</button>
 </form>
